# zkIST

./: .gitignore  Cargo.toml  build.sh  package.json
circuits/: keccak32.circom
examples/: toy_bn254.rs
src/: main.rs  utils.rs
