[package]
name = "zkIST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13.0"
nova-scotia = {git = "https://github.com/nalinbhardwaj/Nova-Scotia.git", branch = "main"}
nova-snark = "0.23.0"
pasta_curves = "0.5.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
